<resources>
    <string name="app_name">Trivia</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="at_least_3">at least 3 characters</string>
    <string name="enter_a_valid_email">enter a valid email address</string>
    <string name="alphanumeric_error">between 4 and 10 alphanumeric characters</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>

    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="create_account">Create Account</string>
    <string name="no_account_yet">No account yet? Create one</string>
    <string name="login">Login</string>
    <string name="already_a_member">Already a member? Login</string>
    <string name="authenticating">Authenticating&#8230;</string>
    <string name="creating_account">Creating account&#8230;</string>
    <string name="profile">Profile</string>
    <string name="categories">Categories</string>
    <string name="fav_categories">Favourite Categories</string>
    <string name="difficulty">Difficulty</string>
    <string name="type">Type</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="logout">Logout</string>
    <string name="login_failed">Login failed</string>
    <string name="signin_failed">SignIn failed</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="google_services_error">Google Play Services error</string>
    <string name="wanna_logout">"Do you want to logout?"</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="next_question">Next Question</string>
    <string name="_15_seconds">+15 seconds</string>
    <string name="remove_one">Remove One</string>
    <string name="android_studio">Android Studio</string>
    <string name="android_studio_email">android.studio@android.com</string>
    <string name="profile_image_error">Profile image could not be loaded</string>
    <string name="image_download_error">Failed to download the image</string>
    <string name="network_error">Oops! There seems to be some issue with your internet :(</string>
    <string name="select_all">Select all</string>
    <string name="deselect_all">Deselect all</string>
    <string name="preferences">Preferences</string>
    <string name="share">Invite friends</string>
    <string name="loading_prefs">Loading preferences..</string>
    <string name="firebase_sync_error">Could not sync preferences with firebase</string>
    <string name="invite">Invite your friends</string>
    <string name="save">Save</string>
    <string name="loading_question">Loading next question&#8230;</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="true_false">True &amp; False</string>
    <string name="multiple">Multiple choice</string>
    <string name="music">Music</string>
    <string name="category_saved">Categories Saved</string>
    <string name="about">About</string>
    <string name="app_settings">App Settings</string>
    <string name="app_lang">App Language</string>
    <string name="at_least_one_option">At least one option should be enabled</string>
    <string name="at_least_one_category">At leaset one category should be selected</string>
    <string name="type_your_answer">Type your answer below</string>
    <string name="_1000">1000</string>
    <string name="accuracy">Accuracy</string>
    <string name="rank">Rank</string>
    <string name="scores">Scores</string>
    <string name="no_questions_available">Couldn\'t find any questions from last play session</string>
    <string name="last_session_title">Answers from last session</string>
    <string name="shall_we_start">Let\'s start, shall we?</string>
    <string name="start_btn_text">Yeah sure!</string>
    <string name="trivia_title">Trivia</string>
    <string name="trivia_subtitle">Do you think you know everything?</string>

</resources>
