<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_user"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_leaderboard"
            android:icon="@drawable/ic_leaderboard"
            android:title="@string/leaderboard" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_category"
            android:title="@string/categories" />
        <item
            android:id="@+id/nav_type"
            android:icon="@drawable/ic_choice"
            android:title="@string/type" />
        <item
            android:id="@+id/nav_difficulty"
            android:icon="@drawable/ic_difficulty"
            android:title="@string/difficulty" />
    </group>

    <item android:title="Account">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
