<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <include
            android:id="@+id/trivia_logo"
            layout="@layout/trivia_logo"/>


        <!--  Name Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:theme="@style/LoginTextLabel"
            android:layout_below="@id/trivia_logo"
            >
            <EditText android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/name"
                android:textColor="@color/white"/>
        </android.support.design.widget.TextInputLayout>

        <include android:id="@+id/email_pass"
            layout="@layout/email_password"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_below="@id/name_input"
            />

        <!-- Signup Button -->
        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:background="@color/white"
            android:layout_below="@id/email_pass"
            android:text="@string/create_account"/>

        <TextView android:id="@+id/link_login"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/already_a_member"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_below="@id/btn_signup"
            android:textSize="16sp"/>

    </RelativeLayout>
</ScrollView>