<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="56dp">

        <include
            android:id="@+id/trivia_logo"
            layout="@layout/trivia_logo"/>

        <include android:id="@+id/email_pass"
            layout="@layout/email_password"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_below="@id/trivia_logo"
            android:layout_marginTop="24dp"/>



            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="24dp"
                android:layout_below="@id/email_pass"
                android:background="@color/white"
                android:text="@string/login" />


            <RelativeLayout
                android:id="@+id/google_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@android:color/holo_red_light"
                android:clickable="true"
                android:layout_marginTop="16dp"
                android:elevation="2dp"
                android:layout_below="@id/btn_login"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/google_img"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="16dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/google" />

                <TextView
                    android:id="@+id/google_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_centerInParent="true"
                    android:text="@string/sign_in_with_google"
                    android:textColor="@color/white" />
            </RelativeLayout>

            <TextView
                android:id="@+id/link_signup"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginTop="8dp"
                android:layout_below="@id/google_login"
                android:gravity="center"
                android:text="@string/no_account_yet"
                android:textColor="@color/white"
                android:textSize="16sp" />
    </RelativeLayout>
</ScrollView>
