<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="io.github.iamutkarshtiwari.trivia.activity.PreferencesActivity"
    tools:ignore="NestedWeights">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/preferencesBG">

        <!--Difficulty setting section-->
        <TextView
            android:id="@+id/difficulty_label"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/difficulty"
            android:gravity="center"
            android:textSize="14sp"
            android:layout_marginLeft="16dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/preferencesDivider"
            android:layout_below="@id/difficulty_label"
            />

        <include layout="@layout/preferences_row"
            android:id="@+id/easy"
            android:layout_marginTop="1dp"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:layout_below="@id/difficulty_label"/>

        <include layout="@layout/preferences_row"
            android:id="@+id/medium"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:layout_below="@id/easy"/>


        <include layout="@layout/preferences_row"
            android:id="@+id/hard"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:layout_below="@id/medium"/>


        <!--App Settings section-->
        <TextView
            android:id="@+id/game_settings_label"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/app_settings"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_below="@id/hard"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/preferencesDivider"
            android:layout_below="@id/game_settings_label" />

        <include layout="@layout/preferences_row"
            android:id="@+id/music"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:layout_marginTop="1dp"
            android:layout_below="@id/game_settings_label"/>



        <RelativeLayout
            android:id="@+id/app_language"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:layout_below="@id/music">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_lang"
                android:layout_marginLeft="16dp"
                android:textColor="@color/black"
                android:layout_centerVertical="true"
                android:textSize="16dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/preferencesDivider"
                android:layout_alignParentBottom="true" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:layout_below="@id/app_language">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:layout_marginLeft="16dp"
                android:textColor="@color/black"
                android:layout_centerVertical="true"
                android:textSize="16dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/preferencesDivider"
                android:layout_alignParentBottom="true" />

        </RelativeLayout>




    </RelativeLayout>

</ScrollView>