<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context="io.github.iamutkarshtiwari.trivia.activity.ProfileActivity"
    tools:ignore="NestedWeights">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/firstOption">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/profile" />

        <TextView
            android:id="@+id/playerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/imageView"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@id/imageView"
            android:text="player"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/playerDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/playerName"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@id/imageView">

            <ImageView
                android:id="@+id/star"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_marginTop="4dp"
                android:src="@drawable/star" />

            <TextView
                android:id="@+id/playerScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="4dp"
                android:layout_toRightOf="@id/star"
                android:gravity="center"
                android:text="5000"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

        </RelativeLayout>


        <LinearLayout
            android:id="@+id/optionBackground"
            android:layout_width="match_parent"
            android:layout_height="395dp"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="160dp"
            android:background="@color/optionBackground">

        </LinearLayout>


        <LinearLayout
            android:id="@+id/question_panel"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/imageView"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/questions_bg"
            android:elevation="2dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/accurayLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/accuracy"
                    android:textAllCaps="true"
                    android:textColor="@color/lightGray"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/accurayPercent"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="70%"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/ratio"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"

                        android:text="7 of 10"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginLeft="4dp"
                        android:layout_toRightOf="@id/ratio"
                        android:gravity="center"
                        android:text="correct answers"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/rankLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="NEW RANK"
                    android:textAllCaps="true"
                    android:textColor="@color/lightGray"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/rank"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="1205"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/climbed"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginLeft="4dp"
                        android:gravity="center"
                        android:text="Climbed"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/jump_value"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginLeft="4dp"
                        android:layout_toRightOf="@id/climbed"
                        android:gravity="center"
                        android:text="135"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginLeft="4dp"
                        android:layout_toRightOf="@id/jump_value"
                        android:gravity="center"
                        android:text="places"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                </RelativeLayout>


            </LinearLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/session_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/question_panel"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/last_session_title"
            android:textColor="@color/colorPrimaryDark"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/category_stats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:scrollbars="horizontal" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/category_stats"
            android:layout_below="@id/session_title"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/previous_questions"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="2dp"
                android:scrollbars="horizontal" />

            <TextView
                android:id="@+id/empty_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/no_questions_available" />

        </RelativeLayout>


    </RelativeLayout>
</ScrollView>